--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ serde = { version = "1.0", features = ["derive", "alloc"], default-features = fa
 aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["test"] }
 aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git" }
 
+[target.wasm32-unknown-unknown]
+runner = "aidoku-test-runner"
+
 [lib]
 crate-type = ["cdylib"]
 
@@ -18,6 +21,6 @@ panic = "abort"
 
 [profile.release]
 panic = "abort"
+lto = true
 opt-level = "s"
 strip = true
-lto = true
